--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "sops-decoder": "^0.10.1"
+    "path": "^0.12.7"
   }
 }
