feat: find all sops encrypted files in the repo

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:vscode-sops-edit.decrypt"
+    "*"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "yaml": "^2.2.1"
   }
 }
