--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "displayName": "SOPS easy edit",
   "description": "Never again worry about encrypting, decrypting or accidentally committing decrypted files.",
   "version": "0.0.1",
+  "publisher": "ShipitSmarter",
+  "author": {
+    "name": "ShipitSmarter",
+    "url": "https://github.com/ShipitSmarter"
+  },
+  "contributors": [
+    {
+      "name": "Bram van der Horn",
+      "url": "https://github.com/bvanderhorn"
+    }
+  ],
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -71,6 +82,15 @@
     "mocha": "^9.2.1",
     "typescript": "^4.5.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ShipitSmarter/vscode-sops-edit"
+  },
+  "galleryBanner": {
+    "color": "#1c2237",
+    "theme": "dark"
+  },
+  "icon": "img/sops_easy_edit_logo.png",
   "dependencies": {
     "fs": "^0.0.1-security",
     "yaml": "^2.2.1"
