feat: Replace done array with object

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     {
       "name": "Bram van der Horn",
       "url": "https://github.com/bvanderhorn"
+    },
+    {
+      "name": "Jeffrey Tummers",
+      "url": "https://github.com/ThumNet"
     }
   ],
   "engines": {
