feat: decrypt/encrypt on all associated file extensions in editor title

--- a/package.json
+++ b/package.json
@@ -45,12 +45,20 @@
         "title": "SOPS: edit directly"
       },
       {
-        "command": "sops-edit.decrypt",
+        "command": "sops-edit.decrypt-context",
         "title": "SOPS: decrypt in-place"
       },
       {
-        "command": "sops-edit.encrypt",
+        "command": "sops-edit.encrypt-context",
         "title": "SOPS: encrypt in-place"
+      },
+      {
+        "command": "sops-edit.decrypt-editor",
+        "title": "Decrypt"
+      },
+      {
+        "command": "sops-edit.encrypt-editor",
+        "title": "Encrypt"
       }
     ],
     "menus": {
@@ -61,15 +69,27 @@
           "group": "sops-edit"
         },
         {
-          "command": "sops-edit.decrypt",
+          "command": "sops-edit.decrypt-context",
           "when": "resourceFilename =~ /^[\\s\\S]*\\.(yaml|yml|json|env|ini|txt)$/",
           "group": "sops-edit"
         },
         {
-          "command": "sops-edit.encrypt",
+          "command": "sops-edit.encrypt-context",
           "when": "resourceFilename =~ /^[\\s\\S]*\\.(yaml|yml|json|env|ini|txt)$/",
           "group": "sops-edit"
         }
+      ],
+      "editor/title": [
+				{
+					"when": "resourceFilename =~ /^[\\s\\S]*\\.(yaml|yml|json|env|ini|txt)$/",
+					"command": "sops-edit.decrypt-editor",
+					"group": "navigation"
+				},
+        {
+					"when": "resourceFilename =~ /^[\\s\\S]*\\.(yaml|yml|json|env|ini|txt)$/",
+					"command": "sops-edit.encrypt-editor",
+					"group": "navigation"
+				}
       ]
     },
     "configuration": {
