--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "auto"
   ],
   "activationEvents": [
-    "*"
+    "workspaceContains:**/.sops.yaml"
   ],
   "main": "./out/extension.js",
   "contributes": {
