--- a/package.json
+++ b/package.json
@@ -94,12 +94,15 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "deploy": "vsce publish"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
     "@types/glob": "^7.2.0",
     "@types/ini": "^1.3.31",
     "@types/mocha": "^9.1.0",
@@ -111,7 +114,7 @@
     "@vscode/vsce": "^2.19.0",
     "eslint": "^8.9.0",
     "glob": "^7.2.0",
-    "mocha": "^9.2.1",
+    "mocha": "^9.2.2",
     "typescript": "^4.5.5"
   },
   "repository": {
@@ -126,6 +129,7 @@
   "dependencies": {
     "@types/vscode": "^1.78.0",
     "@vscode/vsce": "^2.19.0",
+    "chai": "^4.3.7",
     "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
     "ini": "^4.1.0",
