--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
     "@types/glob": "^7.2.0",
     "@types/ini": "^1.3.31",
     "@types/mocha": "^9.1.0",
-    "@types/node": "14.x",
+    "@types/node": "^14.18.47",
+    "@types/sinon": "^10.0.15",
     "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -114,6 +115,7 @@
     "@vscode/vsce": "^2.19.0",
     "eslint": "^8.9.0",
     "glob": "^7.2.0",
+    "sinon": "^15.0.4",
     "typescript": "^4.5.5"
   },
   "repository": {
